--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="btn_cancel">Abbrechen</string>
     <string name="btn_deleteproject">Projekt löschen</string>
 
+    <string name="project_name">Name</string>
     <string name="colorpicker">Farbe</string>
-    <string name="projectName">Name</string>
 
     <string name="label_starttime">Beginn</string>
     <string name="label_stoptime">Ende</string>
@@ -26,6 +26,7 @@
     <string name="change_project">Bearbeiten</string>
 
     <string name="placeholder_duration">3T 8H 5M</string>
+    <string name="btn_project_inactive">ZzzZzzzz</string>
 
 
 </resources>
